<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_time_bg"
    android:orientation="vertical"
    tools:context="com.hackydesk.thesaviour.firsttime">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20ssp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="338dp"
                android:layout_height="44dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/login"
                android:textColor="@color/lighttext2"
                android:textSize="@dimen/_20ssp" />

            <Button
                android:id="@+id/LOGIN"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:background="@color/btnbackgrouncolor"
                android:fontFamily="sans-serif-black"
                android:text="@string/i_am_saviour"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_20sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/register"
                android:textColor="@color/lighttext2"
                android:textSize="@dimen/_20ssp" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:background="@color/btnbackgrouncolor"
                android:fontFamily="sans-serif-black"
                android:text="Become Saviour"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/parentlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="GUARDIAN MODE"
                android:textColor="@color/lighttext2"
                android:textSize="@dimen/_20ssp" />

            <Button
                android:id="@+id/Parentmode"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:background="@color/bigbtnborder"
                android:fontFamily="sans-serif-black"
                android:text="GUardian Login"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_20sdp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>